build code cleanup, doc